--- a/integration_tests/test_suites/daemon-test-suite/tox.ini
+++ b/integration_tests/test_suites/daemon-test-suite/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{39,38,37,36}-{unix,windows},mypy
+envlist = py{39,38,37,36}-{unix,windows}
 skipsdist = True
 
 [testenv]
@@ -8,7 +8,7 @@ setenv =
 passenv = HOME AIRFLOW_HOME AWS_* BUILDKITE* CI_* COVERALLS_REPO_TOKEN DAGSTER_* DOCKER_* GOOGLE_* KUBECONFIG POSTGRES_TEST_DB_HOST
 deps =
   objgraph
-  -e ../../../python_modules/dagster[mypy,test]
+  -e ../../../python_modules/dagster[test]
   -e ../../../python_modules/dagster-graphql
   -e ../../../python_modules/dagit
   -e ../../../python_modules/dagster-test
@@ -26,7 +26,3 @@ allowlist_externals =
 commands =
   !windows: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   pytest  -s -vv  {posargs}
-
-[testenv:mypy]
-commands =
-  mypy --config=../../../pyproject.toml --non-interactive --install-types {posargs} .
