--- a/python_modules/dagster/tox.ini
+++ b/python_modules/dagster/tox.ini
@@ -13,7 +13,7 @@ deps =
   definitions_tests_old_pendulum: pendulum==1.4.4
   storage_tests_old_sqlalchemy: sqlalchemy==1.3.24
   -e ../dagster-test
-  -e .[mypy,test]
+  -e .[mypy,test,pyright]
 allowlist_externals =
   /bin/bash
 commands =
