--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = pyright-{root,assets_smoke_test,project_fully_featured,quickstart}
+env_list = pyright
 skip_install = true
 skipsdist = True
 
