--- a/tox.ini
+++ b/tox.ini
@@ -65,7 +65,7 @@ deps =
 
   ### python_modules/libraries
   -e python_modules/libraries/dagster-airbyte
-  -e python_modules/libraries/dagster-airflow
+  -e python_modules/libraries/dagster-airflow[test_airflow_2]
   -e python_modules/libraries/dagster-aws[test]
   -e python_modules/libraries/dagster-azure
   -e python_modules/libraries/dagster-celery-docker
